<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/backup_title_cloud_backup">
        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="web_dav_host"
            app:title="@string/backup_title_web_dav_host" />
        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="web_dav_account"
            app:title="@string/backup_title_web_dav_account" />
        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="web_dav_pw"
            app:title="@string/backup_title_web_dav_password" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="backup_cloud_auto"
            app:summary="@string/backup_summary_enable__auto_cloud_backup"
            app:title="@string/backup_title_enable_cloud_auto_backup" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="backup_cloud"
            app:persistent="false"
            app:title="@string/backup_title_now_cloud_backup" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="restore_cloud"
            app:persistent="false"
            app:title="@string/backup_title_restore_cloud_backup" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/backup_title_local_backup">
        <Preference
            app:iconSpaceReserved="false"
            app:key="backup_path"
            app:summary="@string/backup_summary_backup_path"
            app:title="@string/backup_title_backup_path" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="backup_local_auto"
            app:summary="@string/backup_summary_enable_local_auto_backup"
            app:title="@string/backup_title_enable_local_auto_backup" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="backup_local"
            app:persistent="false"
            app:summary="@string/main_settings_summary_backup"
            app:title="@string/main_settings_title_backup" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="restore_local"
            app:persistent="false"
            app:summary="@string/main_settings_summary_restore"
            app:title="@string/main_settings_title_restore" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/backup_title_common_settings">
        <rikka.preference.SimpleMenuPreference
            app:defaultValue="BACKUP_SCOPE_ALL"
            app:entries="@array/backup_scope_entries"
            app:entryValues="@array/backup_scope_values"
            app:iconSpaceReserved="false"
            app:key="backup_scope"
            app:summary="%s"
            app:title="@string/backup_title_backup_scope" />
        <rikka.preference.SimpleMenuPreference
            app:defaultValue="BACKUP_OVER_MINUTE"
            app:entries="@array/backup_cover_entries"
            app:entryValues="@array/backup_cover_values"
            app:iconSpaceReserved="false"
            app:key="backup_cover"
            app:summary="%s"
            app:title="@string/backup_title_cover_backup" />
        <rikka.preference.SimpleMenuPreference
            app:defaultValue="RESTORE_MODE_COVER"
            app:entries="@array/restore_mode_entries"
            app:entryValues="@array/restore_mode_values"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            app:key="restore_mode"
            app:summary="%s"
            app:title="恢复模式" />

    </PreferenceCategory>

</PreferenceScreen>