<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/startFloat"
        android:icon="@drawable/ic_start_float_24"
        android:title="@string/extension_start_float_window"
        app:showAsAction="ifRoom" />
    <item android:title="@string/record_menu_show_method">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/toTypeShow"
                    android:checked="true"
                    android:title="@string/record_menu_type_show" />
                <item
                    android:id="@+id/toAppShow"
                    android:checked="false"
                    android:title="@string/record_menu_app_show" />
            </group>
        </menu>

    </item>
    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/record_menu_delete_all" />
    <item
        android:id="@+id/delete_read"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/record_menu_delete_read" />

</menu>