<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_toolbar_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_invert_selection"
        android:title="@string/invert_selection"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/help_24"
        android:title="@string/main_settings_title_help"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction" />
</menu>